# Django_home_work_19.1

./: .gitignore  README.md  index.html  main.py  pyproject.toml
